--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "faker": "^5.5.3",
+    "firebase-admin": "^10.0.2",
     "knex": "^0.95.13",
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
@@ -28,6 +29,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "normalizr": "^3.6.1",
+    "nuid": "^1.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "socket.io": "^3.0.4",
